# plsdo

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_issue.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: input-format.md  interpreting-output.md  missing-data.md  usage.md
docs/superpowers/plans/: 2026-04-21-pls-module.md
docs/superpowers/specs/: 2026-04-21-pls-module-design.md
plsdo/: __init__.py  cli.py  core.py  cross_validate.py  io.py  pipeline.py  plotting.py
tests/: conftest.py  test_cli.py  test_core.py  test_cross_validate.py  test_fixtures.py  test_io.py  test_plotting.py
tests/data/: behaviour.csv  behaviour_meta.csv  brain.csv  brain_meta.csv  demographics.csv  groups.yaml
