[project]
name = "plsdo"
version = "0.1.0"
description = "PLS covariance analysis with statistical testing and visualisation"
license = "BSD-3-Clause"
authors = [
    { name = "Eilidh MacNicol" },
]
maintainers = [
    { name = "Eilidh MacNicol" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "pyyaml",
]

[project.optional-dependencies]
cv = [
    "scikit-learn",
]
dev = [
    "pytest",
    "ruff",
    "scikit-learn",
]

[project.scripts]
plsdo = "plsdo.cli:pls_main"

[project.urls]
Repository = "https://github.com/braincentrekcl/plsdo"
Issues = "https://github.com/braincentrekcl/plsdo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
