[project]
name = "plsdo"
version = "0.1.0"
description = "PLS covariance analysis with statistical testing and visualisation"
keywords = ["PLS", "multivariate", "statistics", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
authors = [
    { name = "Eilidh MacNicol" },
]
maintainers = [
    { name = "Eilidh MacNicol" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cv = [
    "scikit-learn>=1.2",
]
dev = [
    "pytest",
    "ruff",
    "scikit-learn",
]

[project.scripts]
plsdo = "plsdo.cli:pls_main"

[project.urls]
Repository = "https://github.com/braincentrekcl/plsdo"
Issues = "https://github.com/braincentrekcl/plsdo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error::UserWarning:seaborn",
]
